# NaiveTensorLib

./: .gitignore  CMakeLists.txt  README.md
src/: Matrix.h  main.cu
